--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ body {
 }
 
 form {
-    background-color: rgb(253, 253, 253);
-    color: rgb(95, 240, 155);
+    background-color: rgba(253, 253, 253, 0.596);
+    color: rgb(97, 95, 240);
 
 }
 
