--- a/index.css
+++ b/index.css
@@ -1,15 +1,28 @@
 body {
-    background-color: rgb(56, 90, 156);
+    background-color: #2f2f2f;;
     color: white;
     padding: 40px;
     font-family: Arial;
     text-align: center;
+    border-radius: 25px;
 }
 
 form {
     background-color: rgba(253, 253, 253, 0.596);
     color: rgb(97, 95, 240);
+    border-radius: 25px;
+}
 
+.form-container {
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 2px 2px;
+    border-radius: 25px;
+}
+
+.form-container:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 25px;
 }
 
 .image {
@@ -19,7 +32,7 @@ form {
 }
 
 input[type=text] {
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 12px 0;
     box-sizing: border-box;
@@ -31,15 +44,6 @@ input[type=text] {
   
 input[type=text]:focus {
     border: 3px solid #555;
-}
-
-@font-face {
-    font-family: myFirstFont;
-    src: url(sansation_light.woff);
- }
- 
- * {
-    font-family: myFirstFont;
 }
 
 body {
@@ -63,4 +67,32 @@ body {
  
 .fa:hover {
     transform: scale(1.2);
+}
+
+.sneaker-containers {
+    transition: 0.3s;
+    border-radius: 25px; 
+}
+
+.sneaker-containers:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    background-color: rgba(253, 253, 253, 0.596);
+    color: black;
+    border-radius: 25px;
+}
+
+img:hover {
+    transform: scale(1.25);
+}
+
+label {
+    font-weight: bold;
+}
+
+.zoom:hover {
+    transform: scale(1.5);
+}
+
+.button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
